----------------------
ClientSettings
----------------------

----------------------
Version: 1.0.2-pl
Released: 2015-02-10
----------------------
- Bug fixed
- New 'Select from resource tree' function added.

----------------------
Version: 1.0.1-pl
Released: 2014-04-14
----------------------
- Cache bug fixed
- Bether and default Extjs comboboxes
- Faster

----------------------
Version: 1.0.0
Released: 2014-01-03
----------------------
- First release