@@ -7,7 +7,10 @@ Version: 1.0.2-pl
 Released: 2015-02-10
 ----------------------
 - Bug fixed
-- New 'Select from resource tree' function added.
+- New setting types added
+	- 'Select from resource from tree' type
+	- Media browser type
+	- Date / time type
 
 ----------------------
 Version: 1.0.1-pl
